# crewai-crew

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
crewfarm/: __init__.py  runner.py  state.py  verification.py  verifier_agent.py
docs/plans/: 2026-02-28-crewai-content-crew-design.md  2026-02-28-crewai-content-crew-implementation.md  2026-03-01-channel-registry-design.md  2026-03-01-channel-registry.md
output/: landing-page-sme-ai.html  landing-page-sme-ai.md
src/: agents.py  crew.py  crew_registry.py  db.py  discord_bot.py  main.py  quant_agents.py  quant_crew.py  quant_tasks.py  tasks.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  yfinance_tool.py
